--- a/index.html
+++ b/index.html
@@ -275,29 +275,28 @@
       2024:
       <ul>
         <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
+        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #1</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #2</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #3</em></strong> de Edgard P. Jacobs</li>
         <li>✅ <em><strong>Somos la leche</em></strong> de Alba Padró</li>
-        <li>✅ <em><strong>Astérix</em></strong> de J. Y. Ferri y D. Conrad</li>
-        <li>&emsp;&emsp;&rarr; Astérix en Italia</li>
-        <li>&emsp;&emsp;&rarr; Astérix tras las huellas del grifo</li>
-        <li>&emsp;&emsp;&rarr; Astérix y los Pictos</li>
-        <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
-        <li>&emsp;&emsp;&rarr; Astérix y Cleopatra</li>
-        <li>&emsp;&emsp;&rarr; Astérix en Hispania</li>
-        <li>&emsp;&emsp;&rarr; Astérix el Galo</li>
+        <li>✅ <em><strong>Astérix en Italia</em></strong> de J. Y. Ferri y D. Conrad</li>
+        <li>✅ <em><strong>Astérix tras las huellas del grifo</em></strong> de J. Y. Ferri y D. Conrad</li>
+        <li>✅ <em><strong>Astérix y los Pictos</em></strong> de J. Y. Ferri y D. Conrad</li>
+        <li>♻️ <em><strong>Astérix y Cleopatra</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix en Hispania</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix el Galo</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Todos a la cama</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
-        <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
-        <li>&emsp;&emsp;&rarr; Las joyas de la Castafiore</li>
-        <li>&emsp;&emsp;&rarr; Vuelo 714 para Sidney</li>
-        <li>&emsp;&emsp;&rarr; Tintín y el lago de los tiburones</li>
-        <li>&emsp;&emsp;&rarr; Tintín y los pícaros</li>
+        <li>♻️ <em><strong>Las joyas de la Castafiore</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Vuelo 714 para Sidney</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín y el lago de los tiburones</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín y los pícaros</em></strong> de Hergé</li>
         <li>✅ <em><strong>Necesidad del libro</em></strong> de Ángel María de Lera</li>
         <li>✅ <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
         <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
         <li>🔥 <em><strong>Una velada en la librería Morisaki</em></strong> de Satoshi Yagisawa</li>
-        <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
-        <li>&emsp;&emsp;&rarr; #4 (Vol. 10–12)</li>
+        <li>❤️ <em><strong>One piece: #4 (Vol. 10–12)</em></strong> de Eiichirō Oda</li>
       </ul>
       <br>2023:
       <ul>
@@ -310,56 +309,50 @@
         <li>❤️ <em><strong>Todo arde</em></strong> de Juan Gómez-Jurado</li>
         <li>✅ <em><strong>Mi parto robado</em></strong> de Nahia Alkorta</li>
         <li>❤️ <em><strong>Paternidad aquí y ahora</em></strong> de Máximo Peña</li>
-        <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
-        <li>&emsp;&emsp;&rarr; Tintín en el Congo</li>
-        <li>&emsp;&emsp;&rarr; Tintín en América</li>
-        <li>&emsp;&emsp;&rarr; Los cigarros del faraón</li>
-        <li>&emsp;&emsp;&rarr; El Loto Azul</li>
-        <li>&emsp;&emsp;&rarr; La oreja rota</li>
-        <li>&emsp;&emsp;&rarr; La isla Negra</li>
-        <li>&emsp;&emsp;&rarr; El cetro de Ottokar</li>
-        <li>&emsp;&emsp;&rarr; El cangrejo de las pinzas de oro</li>
-        <li>&emsp;&emsp;&rarr; La estrella misteriosa</li>
-        <li>&emsp;&emsp;&rarr; El secreto del Unicornio</li>
-        <li>&emsp;&emsp;&rarr; El tesoro de Rackham el Rojo</li>
-        <li>&emsp;&emsp;&rarr; Las siete bolas de cristal</li>
-        <li>&emsp;&emsp;&rarr; El Templo del Sol</li>
-        <li>&emsp;&emsp;&rarr; Tintín en el país del oro negro</li>
-        <li>&emsp;&emsp;&rarr; Objetivo: la Luna</li>
-        <li>&emsp;&emsp;&rarr; Atterizaje en la Luna</li>
-        <li>&emsp;&emsp;&rarr; El asunto Tornasol</li>
-        <li>&emsp;&emsp;&rarr; Stock de Coque</li>
-        <li>&emsp;&emsp;&rarr; Tintín en el Tíbet</li>
+        <li>♻️ <em><strong>Tintín en el Congo</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín en América</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Los cigarros del faraón</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El Loto Azul</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>La oreja rota</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>La isla Negra</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El cetro de Ottokar</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El cangrejo de las pinzas de oro</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>La estrella misteriosa</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El secreto del Unicornio</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El tesoro de Rackham el Rojo</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Las siete bolas de cristal</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El Templo del Sol</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín en el país del oro negro</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Objetivo: la Luna</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Atterizaje en la Luna</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>El asunto Tornasol</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Stock de Coque</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín en el Tíbet</em></strong> de Hergé</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
-        <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
-        <li>&emsp;&emsp;&rarr; #1 (Vol. 1–3)</li>
-        <li>&emsp;&emsp;&rarr; #2 (Vol. 4–6)</li>
-        <li>&emsp;&emsp;&rarr; #3 (Vol. 7–9)</li>
+        <li>❤️ <em><strong>One piece: #1 (Vol. 1–3)</em></strong> de Eiichirō Oda</li>
+        <li>❤️ <em><strong>One piece: #2 (Vol. 4–6)</em></strong> de Eiichirō Oda</li>
+        <li>❤️ <em><strong>One piece: #3 (Vol. 7–9)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
-        <li>✅ <em><strong>Magos del Humor</em></strong> de Franciso Ibáñez</li>
-        <li>&emsp;&emsp;&rarr; Mundial de Baloncesto 2023</li>
+        <li>✅ <em><strong>Mundial de Baloncesto 2023</em></strong> de Franciso Ibáñez</li>
         <li>⏹️ <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
-        <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
-        <li>&emsp;&emsp;&rarr; La residencia de los dioses</li>
-        <li>&emsp;&emsp;&rarr; La cizaña</li>
-        <li>&emsp;&emsp;&rarr; El combate de los jefes</li>
-        <li>&emsp;&emsp;&rarr; Astérix en la India</li>
-        <li>&emsp;&emsp;&rarr; Obélix y Compañía</li>
-        <li>&emsp;&emsp;&rarr; La gran travesía</li>
-        <li>&emsp;&emsp;&rarr; Astérix y el caldero</li>
-        <li>&emsp;&emsp;&rarr; Astérix en Córcega</li>
-        <li>&emsp;&emsp;&rarr; El adivino</li>
-        <li>&emsp;&emsp;&rarr; Los laureles del César</li>
-        <li>&emsp;&emsp;&rarr; Astérix y los Normandos</li>
-        <li>&emsp;&emsp;&rarr; Astérix en Helvecia</li>
-        <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
-        <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
-        <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
-        <li>✅ <em><strong>El árabe del futuro</em></strong> de Riad Sattouf</li>
-        <li>&emsp;&emsp;&rarr; Vol. 6: 1994-2011</li>
+        <li>♻️ <em><strong>La residencia de los dioses</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>La cizaña</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>El combate de los jefes</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix en la India</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Obélix y Compañía</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>La gran travesía</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix y el caldero</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix en Córcega</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>El adivino</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Los laureles del César</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix y los Normandos</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix en Helvecia</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>✅ <em><strong>Blake y Mortimer: El misterio de la gran pirámide #1</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>Blake y Mortimer: El misterio de la gran pirámide #2</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>El árabe del futuro: Vol. 6 (1994-2011)</em></strong> de Riad Sattouf</li>
         <li>⏹️ <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>❤️ <em><strong>Later</em></strong> by Stephen King</li>
         <li>✅ <em><strong>Almáciga</em></strong> de María Sánchez</li>
@@ -369,14 +362,12 @@
         <li>❤️ <em><strong>Memorias de un dibujante en pijama: El integral</em></strong> de Paco Roca</li>
         <li>✅ <em><strong>Los secretos de las Tierras Intermedias</em></strong> de Adrián Suárez</li>
         <li>❤️ <em><strong>Blanco inmaculado</em></strong> de Noelia Lorenzo</li>
-        <li>⏹️ <em><strong>Slam Dunk</em></strong> de Takehiko Inoue</li>
-        <li>&emsp;&emsp;&rarr; Vol. 1: Hanamichi Sakuragi</li>
-        <li>♻️ <em><strong>Olimpiadas del Humor</em></strong> de Franciso Ibáñez</li>
-        <li>&emsp;&emsp;&rarr; Gatolandia 76</li>
-        <li>&emsp;&emsp;&rarr; Moscú 80</li>
-        <li>&emsp;&emsp;&rarr; Los Ángeles 84</li>
-        <li>&emsp;&emsp;&rarr; Seúl 88</li>
-        <li>&emsp;&emsp;&rarr; Barcelona 92</li>
+        <li>⏹️ <em><strong>Slam Dunk: Vol. 1 (Hanamichi Sakuragi)</em></strong> de Takehiko Inoue</li>
+        <li>♻️ <em><strong>Gatolandia 76</em></strong> de Franciso Ibáñez</li>
+        <li>♻️ <em><strong>Moscú 80</em></strong> de Franciso Ibáñez</li>
+        <li>♻️ <em><strong>Los Ángeles 84</em></strong> de Franciso Ibáñez</li>
+        <li>♻️ <em><strong>Seúl 88</em></strong> de Franciso Ibáñez</li>
+        <li>♻️ <em><strong>Barcelona 92</em></strong> de Franciso Ibáñez</li>
       </ul>
       <br>2022:
       <ul>
@@ -393,8 +384,7 @@
         <li>✅ <em><strong>Fray Perico y su borrico</em></strong> de Juan Muñoz</li>
         <li>✅ <em><strong>El juego del alma</em></strong> de Javier Castillo</li>
         <li>✅ <em><strong>La chica de nieve</em></strong> de Javier Castillo</li>
-        <li>✅ <em><strong>El árabe del futuro</em></strong> de Riad Sattouf</li>
-        <li>&emsp;&emsp;&rarr; Vol. 5: 1992-1994</li>
+        <li>✅ <em><strong>El árabe del futuro: Vol. 5 (1992-1994)</em></strong> de Riad Sattouf</li>
         <li>⏹️ <em><strong>Apocalipsis</em></strong> de Stephen King</li>
         <li>⏹️ <em><strong>Bibliotecas imaginarias</em></strong> de Mario Satz</li>
         <li>🔥 <em><strong>Alguien habló de nosotros</em></strong> de Irene Vallejo</li>
@@ -438,14 +428,12 @@
         <li>❤️ <em><strong>Microhistoria de España</em></strong> de William Chislett</li>
         <li>✅ <em><strong>El libro rojo de la publicidad</em></strong> de Luis Basat</li>
         <li>✅ <em><strong>Replay. The History of Video Games</em></strong> by Tristan Donovan</li>
-        <li>✅ <em><strong>Death Note</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
-        <li>&emsp;&emsp;&rarr; Vol. 1: Boredom</li>
-        <li>&emsp;&emsp;&rarr; Vol. 2: Confluence</li>
-        <li>&emsp;&emsp;&rarr; Vol. 3: Hard Run</li>
-        <li>&emsp;&emsp;&rarr; Vol. 4: Love</li>
-        <li>&emsp;&emsp;&rarr; Vol. 5: Witheout</li>
-        <li>✅ <em><strong>Fullmetal Alchemist</em></strong> by Hiromu Arakawa</li>
-        <li>&emsp;&emsp;&rarr; Volume One</li>
+        <li>✅ <em><strong>Death Note: Vol. 1 (Boredom)</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+        <li>✅ <em><strong>Death Note: Vol. 2 (Confluence)</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+        <li>✅ <em><strong>Death Note: Vol. 3 (Hard Ru)</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+        <li>✅ <em><strong>Death Note: Vol. 4 (Love)</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+        <li>✅ <em><strong>Death Note: Vol. 5 (Witheout)</em></strong> by Tsugumi Ohba and Takeshi Obata</li>
+        <li>✅ <em><strong>Fullmetal Alchemist: Vol. 1</em></strong> by Hiromu Arakawa</li>
       </ul>
       <br>2020:
       <ul>
@@ -463,27 +451,24 @@
         <li>⏹️ <em><strong>El fin de la eternidad</em></strong> de Isaac Asimov</li>
         <li>✅ <em><strong>Filosofía de la cultura</em></strong> de Jesús Mosterín</li>
         <li>✅ <em><strong>Misery</em></strong> de Stephen King</li>
-        <li>✅ <em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett  y Harris</li>
+        <li>✅ <em><strong>Los jinetes del Apocalipsis</em></strong> de Dawkins, Hitchens, Dennett y Harris</li>
         <li>⏹️ <em><strong>Eva</em></strong> de Arturo Pérez-Reverte</li>
         <li>✅ <em><strong>Falcó</em></strong> de Arturo Pérez-Reverte</li>
         <li>❤️ <em><strong>Sapiens</em></strong> de Yuval Noah Harari</li>
         <li>✅ <em><strong>Tipometría</em></strong> de Miguel Catopodis</li>
         <li>✅ <em><strong>Lluvia fina</em></strong> de Luis Landero</li>
-        <li>🔥 <em><strong>The Arab of the Future</em></strong> by Riad Sattouf</li>
-        <li>&emsp;&emsp;&rarr; Vol. 4: 1987–1992</li>
-        <li>❤️ <em><strong>Saga</em></strong> by Brian K. Vaughan and Fiona Staples</li>
-        <li>&emsp;&emsp;&rarr; Book One</li>
-        <li>&emsp;&emsp;&rarr; Book Two</li>
-        <li>&emsp;&emsp;&rarr; Book Three</li>
+        <li>🔥 <em><strong>The Arab of the Future: Vol. 4 (1987–1992)</em></strong> by Riad Sattouf</li>
+        <li>❤️ <em><strong>Saga: Book One</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>❤️ <em><strong>Saga: Book Two</em></strong> by Brian K. Vaughan and Fiona Staples</li>
+        <li>❤️ <em><strong>Saga: Book Three</em></strong> by Brian K. Vaughan and Fiona Staples</li>
         <li>✅ <em><strong>The shape of design</em></strong> by Frank Chimero</li>
         <li>♻️ <em><strong>Crónicas de la Guerra Civil</em></strong> de Miguel Hernández</li>
-        <li>✅ <em><strong>Locke & Key</em></strong> by Joe Hill and Gabriel Rodríguez</li>
-        <li>&emsp;&emsp;&rarr; Welcome to Lovecraft</li>
-        <li>&emsp;&emsp;&rarr; Head Games</li>
-        <li>&emsp;&emsp;&rarr; Crown of Shadows</li>
-        <li>&emsp;&emsp;&rarr; Keys to the Kingdom</li>
-        <li>&emsp;&emsp;&rarr; Clockworks</li>
-        <li>&emsp;&emsp;&rarr; Alpha & Omega</li>
+        <li>✅ <em><strong>Locke & Key: Welcome to Lovecraft</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+        <li>✅ <em><strong>Locke & Key: Head Games</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+        <li>✅ <em><strong>Locke & Key: Crown of Shadows</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+        <li>✅ <em><strong>Locke & Key: Keys to the Kingdom</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+        <li>✅ <em><strong>Locke & Key: Clockworks</em></strong> by Joe Hill and Gabriel Rodríguez</li>
+        <li>✅ <em><strong>Locke & Key: Alpha & Omega</em></strong> by Joe Hill and Gabriel Rodríguez</li>
         <li>⏹️ <em><strong>La peste</em></strong> de Albert Camus</li>
         <li>✅ <em><strong>Designing books</em></strong> by Jost Hochuli</li>
         <li>♻️ <em><strong>Detail in typography</em></strong> by Jost Hochuli</li>
@@ -507,16 +492,14 @@
         <li>❤️ <em><strong>A history of Heavy Metal</em></strong> by Andrew O’Neill</li>
         <li>✅ <em><strong>Easy go</em></strong> by Michael Crichton</li>
         <li>❤️ <em><strong>Elevation</em></strong> by Stephen King</li>
-        <li>✅ <em><strong>Invincible</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
-        <li>&emsp;&emsp;&rarr; no. 1–100</li>
+        <li>✅ <em><strong>Invincible: #1–#100</em></strong> by Robert Kirkman, Ryan Ottley et al.</li>
         <li>❤️ <em><strong>Eric Clapton: The autobiography</em></strong> by Eric Clapton</li>
         <li>✅ <em><strong>Loba Negra</em></strong> de Juan Gómez-Jurado</li>
         <li>✅ <em><strong>El corazón de las tinieblas</em></strong> de Joseph Conrad</li>
         <li>✅ <em><strong>Guía NBA 2019-20 Gigantes</em></strong> de Andrés Monje</li>
         <li>✅ <em><strong>Why I write</em></strong> by George Orwell</li>
         <li>❤️ <em><strong>The Colorado Kid</em></strong> by Stephen King</li>
-        <li>✅ <em><strong>Dr. Stone</em></strong> by Riichiro Inagaki and Boichi</li>
-        <li>&emsp;&emsp;&rarr; no. 1–16</li>
+        <li>✅ <em><strong>Dr. Stone: #1–#16</em></strong> by Riichiro Inagaki and Boichi</li>
         <li>❤️ <em><strong>El cuento de la criada</em></strong> de Margaret Atwood</li>
         <li>✅ <em><strong>The debate</em></strong> by Wim Crouwel and Jan van Toorn</li>
         <li>✅ <em><strong>El cine segun Hitchcock</em></strong> de François Truffaut</li>
@@ -544,8 +527,7 @@
         <li>✅ <em><strong>Of women in the twenty-first century</em></strong> by Shami Chakrabarti</li>
         <li>✅ <em><strong>Fahrenheit 451</em></strong> de Ray Bradbury</li>
         <li>✅ <em><strong>Una lengua muy muy larga</em></strong> de Lola Pons</li>
-        <li>✅ <em><strong>The Umbrella Academy</em></strong> by Gerard Way and Gabriel Bá</li>
-        <li>&emsp;&emsp;&rarr; Apocalypse Suite</li>
+        <li>✅ <em><strong>The Umbrella Academy: Apocalypse Suite</em></strong> by Gerard Way and Gabriel Bá</li>
         <li>✅ <em><strong>Groucho y yo</em></strong> de Groucho Marx</li>
         <li>❤️ <em><strong>Secretos a contraluz</em></strong> de Gonzalo Vázquez</li>
         <li>✅ <em><strong>Wabi-Sabi: For Artists, Designers, Poets & Philosophers</em></strong> by Leonard Koren</li>
@@ -568,8 +550,8 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 5 hours</li>
-        <li>🎮 <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
+        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 27 hours</li>
+        <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
         <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 12 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
