--- a/index.html
+++ b/index.html
@@ -274,10 +274,11 @@
       </p>
       2024:
       <ul>
-        <li>🥸 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
-        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #1</em></strong> de Edgard P. Jacobs</li>
-        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #2</em></strong> de Edgard P. Jacobs</li>
+        <li>🥸 <em><strong>El Evangelio</em></strong> de Elisa Victoria</li>
+        <li>🔥 <em><strong>Escribir es vivir</em></strong> de José Luis Sampedro</li>
         <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #3</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #2</em></strong> de Edgard P. Jacobs</li>
+        <li>✅ <em><strong>Blake y Mortimer: El secreto del Espadón #1</em></strong> de Edgard P. Jacobs</li>
         <li>✅ <em><strong>Somos la leche</em></strong> de Alba Padró</li>
         <li>✅ <em><strong>Astérix en Italia</em></strong> de J. Y. Ferri y D. Conrad</li>
         <li>✅ <em><strong>Astérix tras las huellas del grifo</em></strong> de J. Y. Ferri y D. Conrad</li>
@@ -288,10 +289,10 @@
         <li>✅ <em><strong>Todos a la cama</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>El cerebro del niño explicado a los padres</em></strong> de Álvaro Bilbao</li>
         <li>✅ <em><strong>.ss01</em></strong> by VV.AA. (Type Design Magazine)</li>
-        <li>♻️ <em><strong>Las joyas de la Castafiore</em></strong> de Hergé</li>
-        <li>♻️ <em><strong>Vuelo 714 para Sidney</em></strong> de Hergé</li>
-        <li>♻️ <em><strong>Tintín y el lago de los tiburones</em></strong> de Hergé</li>
         <li>♻️ <em><strong>Tintín y los pícaros</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Tintín y el lago de los tiburones</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Vuelo 714 para Sidney</em></strong> de Hergé</li>
+        <li>♻️ <em><strong>Las joyas de la Castafiore</em></strong> de Hergé</li>
         <li>✅ <em><strong>Necesidad del libro</em></strong> de Ángel María de Lera</li>
         <li>✅ <em><strong>Libros para no perderse</em></strong> de VV.AA. (elDiario.es)</li>
         <li>❤️ <em><strong>El labrador de más aire</em></strong> de Miguel Hernández</li>
@@ -330,9 +331,9 @@
         <li>♻️ <em><strong>Tintín en el Tíbet</em></strong> de Hergé</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
-        <li>❤️ <em><strong>One piece: #1 (Vol. 1–3)</em></strong> de Eiichirō Oda</li>
-        <li>❤️ <em><strong>One piece: #2 (Vol. 4–6)</em></strong> de Eiichirō Oda</li>
         <li>❤️ <em><strong>One piece: #3 (Vol. 7–9)</em></strong> de Eiichirō Oda</li>
+        <li>❤️ <em><strong>One piece: #2 (Vol. 4–6)</em></strong> de Eiichirō Oda</li>
+        <li>❤️ <em><strong>One piece: #1 (Vol. 1–3)</em></strong> de Eiichirō Oda</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
@@ -642,7 +643,7 @@
         <li>⏹️ <em><strong>Sonic Mania</em></strong> on Nintendo Switch, 1 hour</li>
         <li>⏹️ <em><strong>Old Man’s Journey</em></strong> on Nintendo Switch, 1 hour</li>
         <li>🔥 <em><strong>The Legend of Zelda: Breath of the Wild</em></strong> on Nintendo Switch, 155 hours</li>
-        <li>🔥 <em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 40 hours</li>
+        <li>❤️ <em><strong>Ori and the Blind Forest</em></strong> on Nintendo Switch, 40 hours</li>
         <li>❤️ <em><strong>SteamWorld Dig 2</em></strong> on Nintendo Switch, 10 hours</li>
         <li>⏹️ <em><strong>Hollow Knight</em></strong> on Nintendo Switch, 20 hours</li>
       </ul>
