--- a/index.html
+++ b/index.html
@@ -551,9 +551,11 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 27 hours</li>
+        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 5 hours</li>
+        <li>🎮 <em><strong>Guardian Tales</em></strong> on iOS, 3 hours</li>
+        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 31 hours</li>
         <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
-        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 12 hours</li>
+        <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 13 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
         <li>⏹️ <em><strong>Laika: Aged through blood</em></strong> on Playstation 5, 2 hours</li>
         <li>❤️ <em><strong>Dark Souls 3</em></strong> on Playstation 5, 32 hours</li>
