--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@
       </ul>
       2024:
       <ul>
-        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 5 hours</li>
-        <li>🎮 <em><strong>Guardian Tales</em></strong> on iOS, 3 hours</li>
-        <li>🎮 <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 31 hours</li>
+        <li>🎮 <em><strong>Balatro</em></strong> on Nintendo Switch, 10 hours</li>
+        <li>🎮 <em><strong>Guardian Tales</em></strong> on iOS, 4 hours</li>
+        <li>❤️ <em><strong>Prince of Persia: The Lost Crown</em></strong> on Playstation 5, 34 hours</li>
         <li>⏹️ <em><strong>eFootball 2024</em></strong> on Playstation 5, 37 hours</li>
         <li>✅ <em><strong>Vampire Survivors</em></strong> on iOS, 13 hours</li>
         <li>⏹️ <em><strong>Red Dead Redemption 2</em></strong> on Playstation 5, 1 hours</li>
